# smart_office_security

./: .gitignore  CMakeLists.txt  DUAL_CAMERA_README.md  GroundingDINO.py  IMPROVEMENT_PLAN.md  README.md  SETUP_GUIDE.md  TENSORFLOW_INTEGRATION.md  build_and_run.sh  camera_detection.sh  detector.py  detector_headless.py  download_dataset.py  download_sample_videos.sh  dual_camera_detector.py  fix_video_output.sh  requirements.txt  requirements_without_pycoral.txt  run_detection.sh  run_detector.sh  run_dual_camera.sh  run_headless.sh  run_labeling.py  run_single_camera.sh  run_smart.sh  setup_coral.sh  setup_tensorflow.sh  smart_detector.py  utils.py
docs/: BUILD_GUIDE.md  FRAME_PROCESSING_ISSUE.md
include/: alert_system.h  camera_processor.h  dual_camera_detector.h  logger.h  model.h  single_camera_detector.h  utils.h
macos_setup/: environment.yml  macos_setup.md  run_macos.sh  setup_macos.sh  smart_detector_macos.py
src/: alert_system.cpp  camera_processor.cpp  dual_camera_detector.cpp  dual_camera_main.cpp  logger.cpp  main.cpp  model.cpp  single_camera_detector.cpp
training/: convert_to_tflite.py  custom_model_training_guide.md
